--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -4,9 +4,10 @@
 .jobs {
   &-container {
     width: 100vw;
-    height: 90vh;
+    // height: 90vh;
     background-color: rgba(124, 175, 196, 0.5);
 
     @include flexbox(row, flex-start, flex-start);
+    flex-wrap: wrap;
   }
 }
